--- a/templates/cliente/carrinho.html
+++ b/templates/cliente/carrinho.html
@@ -98,7 +98,7 @@
             
             <a href="{% url 'finalizar_pedido' %}" 
                class="btn btn-finalizar w-full py-3 mt-4 text-lg font-bold uppercase rounded-lg shadow-lg 
-                      bg-verde-principal text-white hover:bg-green-700 transition duration-300 transform hover:-translate-y-0.5 block text-center"
+                      bg-green-700 text-white hover:bg-green-800 transition duration-300 transform hover:-translate-y-0.5 block text-center"
             >
                 Finalizar Pedido
             </a>
